Added a little style and html frame

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <title>Sam Glaze</title>
     <link rel="stylesheet" type="text/css" href="css/main.css" />
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400&display=swap" rel="stylesheet">
 </head>
 
 <body class="wrapper">
@@ -14,13 +15,13 @@
         </h1>
         <img src="x" alt="Sam Glaze" />
         <p>
-            I am a student at General Assembly and am an aspiring software engineer. Please look through my portfolio and reach out if
-            you would like to learn more about me.
+            I am a student at General Assembly and am an aspiring software engineer. Take a look at my portfolio and reach out if you
+            would like to learn more.
         </p>
         <nav>
             <ul>
-                <li>projects</li>
-                <li>connect</li>
+                <li>my projects</li>
+                <li>connect with me</li>
             </ul>
         </nav>
     </header>
