--- a/index.html
+++ b/index.html
@@ -15,13 +15,17 @@
         </h1>
         <img src="x" alt="Sam Glaze" />
         <p>
-            I am a student at General Assembly and am an aspiring software engineer. Take a look at my portfolio and reach out if you
-            would like to learn more.
+            I am a student at General Assembly and am an aspiring software engineer.
+            <br>Take a look at my portfolio and reach out if you would like to learn more.
         </p>
         <nav>
             <ul>
-                <li>my projects</li>
-                <li>connect with me</li>
+                <li>
+                    <a href="">projects</a>
+                </li>
+                <li>
+                    <a href="">connect with me</a>
+                </li>
             </ul>
         </nav>
     </header>
