added a pisture and rounded the border

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1>
             Hi, my name is Sam Glaze
         </h1>
-        <img src="x" alt="Sam Glaze" />
+        <img src="photos/linkedin-pic.png" alt="Sam Glaze" />
         <p>
             I am a student at General Assembly and am an aspiring software engineer.
             <br>Take a look at my portfolio and reach out if you would like to learn more.
