added flexbox to my navs

--- a/index.html
+++ b/index.html
@@ -40,11 +40,13 @@
         </div>
     </main>
     <footer>
-        <ul>
+        <nav>
+         <ul>
             <li>linkedin</li>
             <li>github</li>
             <li>twitch</li>
-        </ul>
+         </ul>
+        </nav>
     </footer>
 </body>
 
