Added the portfolio project boxes.

--- a/index.html
+++ b/index.html
@@ -18,24 +18,20 @@
             I am a student at General Assembly and am an aspiring software engineer.
             <br>Take a look at my portfolio and reach out if you would like to learn more.
         </p>
-        <nav>
-            <ul>
-                <li>
-                    <a href="">projects</a>
-                </li>
-                <li>
-                    <a href="">connect with me</a>
-                </li>
-            </ul>
-        </nav>
     </header>
     <main>
-        <div>
-            <div>
+        <div class="project-links">
+            <div class="project">
             </div>
-            <div>
+            <div class="project">
             </div>
-            <div>
+            <div class="project">
+            </div>
+            <div class="project">
+            </div>
+            <div class="project">
+            </div>
+            <div class="project">
             </div>
         </div>
     </main>
