add placeholder images to projects and added effects to hover as well as transition time.

--- a/index.html
+++ b/index.html
@@ -18,20 +18,46 @@
             I am a student at General Assembly and am an aspiring software engineer.
             <br>Take a look at my portfolio and reach out if you would like to learn more.
         </p>
+        <nav>
+            <ul>
+                <li>
+                </li>
+                <li>
+                </li>
+            </ul>
+        </nav>
     </header>
     <main>
         <div class="project-links">
-            <div class="project">
+            <div class="project-image" id="p1">
+                <div class="project-name">
+                    "Project 1"
+                </div>
             </div>
-            <div class="project">
+            <div class="project-image" id="p2">
+                <div class="project-name">
+                    "Project 2"
+                </div>
             </div>
-            <div class="project">
+            <div class="project-image" id="p3">
+                <div class="project-name">
+                    "Project 3"
+                </div>
             </div>
-            <div class="project">
+            <div class="project-image" id="p4">
+                 <div class="project-name">
+                    "Project 4"
+                 </div>
             </div>
-            <div class="project">
+            <div class="project-image" id="p5">
+                <div class="project-name">
+                    "Project 5"
+                </div>
             </div>
-            <div class="project">
+            <div class="project-image" id="p6">
+                <div class="project-name">
+                    "Project 6"
+                </div>
             </div>
         </div>
     </main>
