Added nav bar which connects to other parts of the page and added hover affects.

--- a/index.html
+++ b/index.html
@@ -18,11 +18,13 @@
             I am a student at General Assembly and am an aspiring software engineer.
             <br>Take a look at my portfolio and reach out if you would like to learn more.
         </p>
-        <nav>
+        <nav id="top-nav">
             <ul>
                 <li>
+                    <a href="#p1">Projects</a>
                 </li>
                 <li>
+                    <a href="">Connect</a>
                 </li>
             </ul>
         </nav>
