Added the icons for socials and linked them to socials.

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
         <nav id="top-nav">
             <ul>
                 <li>
-                    <a href="#p1">Projects</a>
+                    <a href="#top-nav">Projects</a>
                 </li>
                 <li>
-                    <a href="">Connect</a>
+                    <a href="#bottom-nav">Connect</a>
                 </li>
             </ul>
         </nav>
@@ -64,11 +64,14 @@
         </div>
     </main>
     <footer>
-        <nav>
+        <nav id="bottom-nav">
          <ul>
-            <li>linkedin</li>
-            <li>github</li>
-            <li>twitch</li>
+            <li>
+                <a href="https://www.linkedin.com/in/samuelglaze/"><img src="photos/linedin.png" alt="linkedin" /></a>
+            </li>
+            <li>
+                <a href="https://github.com/skglaze"><img src="photos/github.png" alt="github" /></a>
+            </li>
          </ul>
         </nav>
     </footer>
